--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,14 @@
 <%- include('./partials/navbar.ejs') %>
-
+  <section> 
+    <div class="container-fluid">  
+      <div class="row my-5 justify-content-center align-items-center">
+        <div class="col text-center">
+          <h1>
+            <div class="display-1">Welcome to Flights</div> 
+            <div lass="display-6">The future of flight itenerary</div> 
+          </h1>
+        </div>
+      </div> 
+    </div>
+  </section>
 <%- include('./partials/footer.ejs') %>
