--- a/views/flights/new.ejs
+++ b/views/flights/new.ejs
@@ -1,27 +1,37 @@
 <%- include('../partials/navbar.ejs') %>
-  <section> 
+  <section class="mt-5"> 
     <div class="container-fluid">
         <div class="row justify-content-center">
-            <form class="col-lg-8 col-sm-6">
+            <form class="col-lg-8 col-sm-6" method="POST" action="/flights">
                 <div class="form-group mt-1">
                     <label for="flightNo">Flight No</label>
-                    <input type="text" class="form-control" placeholder="Flight Number" name="flightNo">
+                    <input type="text" class="form-control" placeholder="Flight Number Between 10-9999" name="flightNo" pattern="[1-9][0-9]{1,3}" required>
                 </div>
                 <div class="form-group mt-1">
                   <label for="airline">Airline</label>
-                  <input type="text" class="form-control" placeholder="Delta" name="airlines">
+                  <select class="form-control" name="airline">
+                    <option>American</option>
+                    <option>Southwest</option>
+                    <option>United</option>
+                  </select>
                 </div>
                 <div class="form-group mt-1">
-                    <label for="airport">Airport</label>
-                    <input type="text" class="form-control" placeholder="DFW" name="airport">
-                  </div>
+                  <label for="airport">Airport</label>
+                  <select class="form-control" name="airport">
+                    <option>DEN</option>
+                    <option>AUS</option>
+                    <option>DFW</option>
+                    <option>LAX</option>
+                    <option>SAN</option>
+                  </select>
+                </div>
                 <div class="form-group mt-1">
                   <label for="date">Departure Date</label>
                   <input type="date" class="form-control" name="date">
                 </div>
                 <div class="form-group mt-3">
-                <input type="submit" class="form-control btn btn-outline-success">
-                 </div>
+                  <input type="submit" class="form-control btn btn-outline-success">
+                </div>
               </form>
         </div>
     </div>
